trustfall_core/test_data/tests/valid_queries/recurse_then_nested_required_edge_depth_two.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        successor @recurse(depth: 2) {
            predecessor {
                predecessor {
                    value @output
                }
            }
        }
    }
}"#,
    arguments: {},
)
