trustfall_core/test_data/tests/parse_errors/fold_and_recurse.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    OriginDirectory {
        out_Directory_Subdirectory @fold @recurse(depth: 2) {
            name @output
        }
    }
}"#,
    arguments: {},
)
